--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -59,29 +59,17 @@ cmake(
 cmake(
     name = "armadillo_lib",
     cache_entries = {
-        # "CMAKE_INSTALL_PREFIX": ".",
-        # "CMAKE_INSTALL_INCLUDEDIR": "include",
-        # deps ":openblas_lib_bazel" will be copied to "$EXT_BUILD_DEPS"
-        # The directory structure of ":openblas_lib_bazel" are retained,
-        # usually libraries are under /lib and headers are under /include
-        # "TPL_BLAS_LIBRARIES": "$EXT_BUILD_DEPS/lib/libopenblas.a"
         "BUILD_SHARED_LIBS": "OFF",
     },
     lib_source = "@armadillo//:all_srcs",
     out_static_libs = ["libarmadillo.a"],
-    # out_include_dir = "include",
     deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
         ":openblas_lib_bazel"
     ],
     copts =[
         "-DARMA_DONT_USE_WRAPPER"
     ],
     linkopts = [
-        # "-lpthread",
-        # "-L$EXT_BUILD_DEPS/lib", "-lopenblas",
         "-lgfortran",
         ],
 )
@@ -94,10 +82,9 @@ cc_library(
     ],
 )
 
-
 # 
 configure_make(
-    name = "hdf5_lib_configure",
+    name = "hdf5_lib",
     configure_in_place = True,
     configure_options = [
         "--with-szlib=libaec/include,$EXT_BUILD_DEPS/libaec/lib",
@@ -105,9 +92,6 @@ configure_make(
     ],
     lib_source = "@hdf5//:all_srcs",
     deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
         ":hdf5_deps_lib",
     ],
     out_static_libs = ["libhdf5.a"],
@@ -119,99 +103,24 @@ configure_make(
 )
 
 cmake(
-    name = "hdf5_lib",
-    cache_entries = {
-        # "CMAKE_INSTALL_PREFIX": ".",
-        # "CMAKE_INSTALL_INCLUDEDIR": "include",
-        # deps ":openblas_lib_bazel" will be copied to "$EXT_BUILD_DEPS"
-        # The directory structure of ":openblas_lib_bazel" are retained,
-        # usually libraries are under /lib and headers are under /include
-        # "TPL_BLAS_LIBRARIES": "$EXT_BUILD_DEPS/lib/libopenblas.a"
-        "BUILD_SHARED_LIBS": "OFF",
-        "CMAKE_BUILD_TYPE": "Release",
-        "HDF5_BUILD_TOOLS": "ON",
-        "BUILD_TESTING": "ON",
-        "SZIP_USE_EXTERNAL": "ON",
-        "ZLIB_USE_EXTERNAL": "ON",
-        "USE_LIBAEC_STATIC": "ON",
-        "SZIP_INCLUDE_DIR": "$EXT_BUILD_DEPS/include",
-        "ZLIB_INCLUDE_DIR": "$EXT_BUILD_DEPS/include",
-        "SZIP_LIBRARY": "$EXT_BUILD_DEPS/lib/libsz.a",
-        "ZLIB_LIBRARY": "$EXT_BUILD_DEPS/lib/libz.a",
-    },
-    lib_source = "@hdf5//:all_srcs",
-    out_static_libs = ["libhdf5.a"],
-    # out_include_dir = "include",
-    deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
-        # ":openblas_lib_bazel"
-        ":hdf5_deps_lib",
-    ],
-    linkopts = [
-        # "-lpthread",
-        # "-L$EXT_BUILD_DEPS/lib", "-lopenblas",
-        # "-lgfortran",
-        # "-lsz", "-lz",
-        ],
-)
-
-cmake(
     name = "z_lib",
     cache_entries = {
-        # "CMAKE_INSTALL_PREFIX": ".",
-        # "CMAKE_INSTALL_INCLUDEDIR": "include",
-        # deps ":openblas_lib_bazel" will be copied to "$EXT_BUILD_DEPS"
-        # The directory structure of ":openblas_lib_bazel" are retained,
-        # usually libraries are under /lib and headers are under /include
-        # "TPL_BLAS_LIBRARIES": "$EXT_BUILD_DEPS/lib/libopenblas.a"
         "BUILD_SHARED_LIBS": "OFF",
     },
     lib_source = "@zlib//:all_srcs",
     out_static_libs = ["libz.a"],
-    # out_include_dir = "include",
-    deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
-        # ":openblas_lib_bazel"
-    ],
-    linkopts = [
-        # "-lpthread",
-        # "-L$EXT_BUILD_DEPS/lib", "-lopenblas",
-        # "-lgfortran",
-        ],
-    copts = ["-fPIC"]
+    copts = ["-fPIC"] # this is necessary otherwise will cause hdf5 build to complain
 )
 
 cmake(
     name = "libaec",
     cache_entries = {
-        # "CMAKE_INSTALL_PREFIX": ".",
-        # "CMAKE_INSTALL_INCLUDEDIR": "include",
-        # deps ":openblas_lib_bazel" will be copied to "$EXT_BUILD_DEPS"
-        # The directory structure of ":openblas_lib_bazel" are retained,
-        # usually libraries are under /lib and headers are under /include
-        # "TPL_BLAS_LIBRARIES": "$EXT_BUILD_DEPS/lib/libopenblas.a"
         "BUILD_SHARED_LIBS": "OFF",
     },
     lib_source = "@libaec//:all_srcs",
     out_static_libs = [
         "libaec.a",
         "libsz.a",
-        ],
-    # out_include_dir = "include",
-    deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
-        # ":openblas_lib_bazel"
-    ],
-    linkopts = [
-        # "-lpthread",
-        # "-L$EXT_BUILD_DEPS/lib", "-lopenblas",
-        # "-lgfortran",
         ],
 )
 
@@ -228,10 +137,7 @@ configure_make(
     ],
     lib_source = "@libmatio//:all_srcs",
     deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
-        ":hdf5_lib_configure",
+        ":hdf5_lib",
         ":z_lib",
     ],
     out_static_libs = ["libmatio.a"],
@@ -241,28 +147,10 @@ configure_make(
 cmake(
     name = "libjsoncpp",
     cache_entries = {
-        # "CMAKE_INSTALL_PREFIX": ".",
-        # "CMAKE_INSTALL_INCLUDEDIR": "include",
-        # deps ":openblas_lib_bazel" will be copied to "$EXT_BUILD_DEPS"
-        # The directory structure of ":openblas_lib_bazel" are retained,
-        # usually libraries are under /lib and headers are under /include
-        # "TPL_BLAS_LIBRARIES": "$EXT_BUILD_DEPS/lib/libopenblas.a"
         "BUILD_SHARED_LIBS": "OFF",
     },
     lib_source = "@jsoncpp//:all_srcs",
     out_static_libs = [
         "libjsoncpp.a",
-        ],
-    # out_include_dir = "include",
-    deps = [
-        # cannot directly use ":openblas_lib",
-        # need bridged through a `cc_library` containing ":openblas_lib"
-        # i.e. ":openblas_lib_bazel"
-        # ":openblas_lib_bazel"
-    ],
-    linkopts = [
-        # "-lpthread",
-        # "-L$EXT_BUILD_DEPS/lib", "-lopenblas",
-        # "-lgfortran",
         ],
 )
