--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,8 @@
+build -c opt
+
 # https://github.com/bazelbuild/rules_foreign_cc/issues/1129#issuecomment-1863628259
 build --noincompatible_sandbox_hermetic_tmp
 test --test_output=all
+
+# Optionally use private .bazelrc.local
+try-import %workspace%/.bazelrc.local
